--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "racer-highway": "^8.1.0",
     "serve-favicon": "^2.5.0",
     "sharedb-mongo": "^1.0.0-beta",
+    "sharedb-redis-pubsub": "^1.0.0-beta.1",
     "showdown": "^1.8.6"
   },
   "optionalDependencies": {},
