first working version

--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "derby-app",
   "subdomain": "derby-app",
-  "description": "Sample application for the Derby framework",
-  "version": "0.6.0",
-  "homepage": "https://derbyjs.com/",
+  "description": "Simple app using the Derby framework",
+  "version": "0.0.1",
   "repository": {
     "type": "git",
     "url": "git://github.com/briceicle/derby-app.git"
@@ -12,26 +11,14 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "coffeeify": "^3.0.1",
-    "coffeescript": "^1.12.7",
-    "compression": "^1.7.2",
-    "connect-mongo": "^2.0.1",
     "d-before-unload": "^0.1.0",
     "d-bootstrap": "^0.1.0",
-    "d-connection-alert": "^0.1.0",
     "derby": "^0.10.3",
     "derby-debug": "^0.1.0",
     "derby-parsing": "^0.7.3",
     "derby-starter": "^0.4.7",
     "derby-stylus": "^0.3.0",
-    "express": "^4.16.3",
-    "express-session": "^1.15.6",
-    "mongodb": "^2.2.9",
-    "racer-bundle": "^0.3.0",
-    "racer-highway": "^8.1.0",
-    "serve-favicon": "^2.5.0",
-    "sharedb-mongo": "^1.0.0-beta",
-    "sharedb-redis-pubsub": "^1.0.0-beta.1",
+    "express": "^4.13.4",
     "showdown": "^1.8.6"
   },
   "optionalDependencies": {},
@@ -39,7 +26,7 @@
   "bugs": {
     "url": "https://github.com/briceicle/derby-app/issues"
   },
-  "main": "server.js",
+  "main": "index.js",
   "author": "Brice Nkengsa",
   "license": "MIT"
 }
