--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "derby-parsing": "^0.7.3",
     "derby-starter": "^0.4.7",
     "derby-stylus": "^0.3.0",
+    "dotenv": "7.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mongodb": "^2.2.9",
