--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "url": "git://github.com/briceicle/derby-app.git"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "coffeeify": "^3.0.1",
@@ -34,7 +35,9 @@
     "showdown": "^1.8.6"
   },
   "optionalDependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "1.18.10"
+  },
   "bugs": {
     "url": "https://github.com/briceicle/derby-app/issues"
   },
