--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^3.0.4",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "coffeeify": "^3.0.1",
     "coffeescript": "^1.12.7",
     "compression": "^1.7.2",
@@ -19,6 +22,7 @@
     "d-before-unload": "^0.1.0",
     "d-bootstrap": "^0.1.0",
     "derby": "^0.10.3",
+    "derby-login": "^1.1.1",
     "derby-debug": "^0.1.0",
     "derby-parsing": "^0.7.3",
     "derby-starter": "^0.4.7",
@@ -27,9 +31,13 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mongodb": "^2.2.9",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "racer-bundle": "^0.3.0",
     "racer-highway": "^8.1.0",
     "redis": "^2.8.0",
+    "scrypt": "^6.0.3",
+    "scryptsy": "^2.0.0",
     "serve-favicon": "^2.5.0",
     "sharedb-mongo": "^1.0.0-beta",
     "sharedb-redis-pubsub": "1.0.0-beta.1",
