--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "async": "^2.6.2",
     "bcrypt": "^3.0.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
@@ -30,6 +31,7 @@
     "dotenv": "7.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "faker": "^4.1.0",
     "mongodb": "^2.2.9",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
