--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,11 +27,14 @@ jobs:
 workflows:
   build-and-deploy:
     jobs:
+      - build
       - aws-ecr/build_and_push_image:
           account-url: "${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com"
           repo: "${AWS_RESOURCE_NAME_PREFIX}"
           region: ${AWS_DEFAULT_REGION}
           tag: "${CIRCLE_SHA1}"
+          requires:
+            - build
       - aws-ecs/deploy-service-update:
           requires:
             - aws-ecr/build_and_push_image
